--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face{
+  font-family: 'ka1';
+  src: url('/static/ka1.ttf') format('ttf');
+}
