--- a/src/app.css
+++ b/src/app.css
@@ -3,12 +3,11 @@
 @tailwind utilities;
 
 :root {
-  --font-sbab: 'font-sbab';
+	--font-sbab: 'font-sbab';
 }
 @font-face {
 	font-family: 'font-sbab';
-	src: url('/public/fonts/SBAB-Display.woff') format('woff'),
-		url('/public/fonts/SBAB-Bold.ttf') format('woff'),
+	src: url('/public/fonts/SBAB-Display.woff') format('woff'), url('/public/fonts/SBAB-Bold.ttf') format('woff'),
 		url('/public/fonts/SBAB-Regular.woff') format('woff');
 }
 
